--- a/src/main/resources/templates/modules/produce_schedule_detail.html
+++ b/src/main/resources/templates/modules/produce_schedule_detail.html
@@ -7,16 +7,17 @@
             <tbody>
                 <tr>
                     <td colspan="3"><span class="bold">生产单号：</span><span th:text="${schedule.code}"></span></td>
-                    <td colspan="3"><span class="bold">交货日期：</span><span th:text="${deliveryDate}"></span></td>
+                    <td colspan="4"><span class="bold">交货日期：</span><span th:text="${deliveryDate}"></span></td>
                 </tr>
                 <tr>
                     <td colspan="3"><span class="bold">计划生产日期：</span><span th:text="${startDate}"></span></td>
-                    <td colspan="3"><a th:href="${'/produce_bom/schedule/' + schedule.id + '/download'}">下载BOM</a></td>
+                    <td colspan="4"><a th:href="${'/produce_bom/schedule/' + schedule.id + '/download'}">下载BOM</a></td>
                 </tr>
                 <tr>
-                    <td colspan="6"><span class="bold">备注：</span><span th:text="${remark}"></span></td>
+                    <td colspan="7"><span class="bold">备注：</span><span th:text="${remark}"></span></td>
                 </tr>
                 <tr>
+                    <td class="bold">物料编号</td>
                     <td class="bold">产成品名称</td>
                     <td class="bold">规格 & 特征值</td>
                     <td class="bold">需求数量</td>
@@ -25,6 +26,7 @@
                     <td class="bold">备注</td>
                 </tr>
                 <tr>
+                    <td th:text="${item.materialCode}"></td>
                     <td th:text="${item.materialName}"></td>
                     <td><div th:text="${itemMaterialSpecification}" style="max-width: 240px; white-space: pre-wrap;"></div></td>
                     <td th:text="${scheduleQuantity}"></td>
@@ -33,15 +35,16 @@
                     <td th:text="${item.remark}"></td>
                 </tr>
                 <tr>
-                    <td class="bold" colspan="5">BOM</td>
+                    <td class="bold" colspan="7">BOM</td>
                 </tr>
                 <tr th:each="row : ${data}" class="bom">
                     <td th:text="${row[0]}"></td>
-                    <td><div th:text="${row[1]}" style="max-width: 240px; white-space: pre-wrap;"></div></td>
-                    <td th:text="${row[2]}"></td>
-                    <td th:text="${row[7]}"></td>
+                    <td th:text="${row[1]}"></td>
+                    <td><div th:text="${row[2]}" style="max-width: 240px; white-space: pre-wrap;"></div></td>
                     <td th:text="${row[3]}"></td>
-                    <td th:text="${row[4]}" style="max-width: 200px; white-space: pre-wrap;"></td>
+                    <td th:text="${row[8]}"></td>
+                    <td th:text="${row[4]}"></td>
+                    <td th:text="${row[5]}" style="max-width: 200px; white-space: pre-wrap;"></td>
                 </tr>
                 <th:block th:if="${item.attachmentList.size() > 0}">
                     <tr>
