--- a/src/main/resources/templates/tpl/ajax_list.html
+++ b/src/main/resources/templates/tpl/ajax_list.html
@@ -72,16 +72,18 @@
                         <table-column
                                 type="index"
                                 label="序号"
-                                width="40">
+                                width="40"
+                                category="column">
                         </table-column>
                         <table-column
                                 type="checkbox"
                                 class="text-center"
                                 label="<input type=checkbox>"
                                 align="center"
-                                width="40" th:if="${'multiple' eq params['mode']}">
+                                width="40" th:if="${'multiple' eq params['mode']}"
+                                category="column">
                         </table-column>
-                        <table-column th:each="n : ${report.reportColumnList}" th:if="${!n.hidden}" th:attr="prop=${n.name}, label=${n.label}, ':sortable'=${n.sortable}, ':tooltip'=${n.tooltip}, width=${n.columnWidth == null? 'auto': n. columnWidth}, align=${n.align.name().toLowerCase()}">
+                        <table-column th:each="n : ${report.reportColumnList}" th:attr="prop=${n.name}, label=${n.label}, category=${n.hidden ? 'hidden': 'column'}, ':sortable'=${n.sortable}, ':tooltip'=${n.tooltip}, width=${n.columnWidth == null? 'auto': n. columnWidth}, align=${n.align.name().toLowerCase()}">
                             <template slot-scope="scope" th:if="${n.type.name() eq 'NUMERIC'}">
                                 {{ scope.row.<th:block th:text="${n.name}"></th:block> | formatInteger}}
                             </template>
@@ -92,7 +94,7 @@
                                 {{openDetailLink('查看', scope.row.id, scope.row.<th:block th:text="${n.name}"></th:block>)}}
                             </template>
                         </table-column>
-                        <table-column label="操作" align="center" th:if="${report.additionalInfo != null && report.additionalInfo['formId'] != null}" sec:authorize="${hasAuthority(#vars.report.code + '_edit') or hasAuthority(#vars.report.code + '_delete')}">
+                        <table-column label="操作" align="center" category="column" th:if="${report.additionalInfo != null && report.additionalInfo['formId'] != null}" sec:authorize="${hasAuthority(#vars.report.code + '_edit') or hasAuthority(#vars.report.code + '_delete')}">
                             <template slot-scope="scope">
                                 {{ openDetailLink('编辑', scope.row.id, '编辑') }}
                                 {{ deleteLink(scope.row.id) }}
