--- a/src/main/resources/templates/modules/purchase/list-detail.html
+++ b/src/main/resources/templates/modules/purchase/list-detail.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="form-group">
                         <label class="col-form-label mr-2" for="partner_id">供应商</label>
-                        <sp:select id="partner_id" name="partner_id" key="core_partner_vendor" class="form-control" emptyItemText required/>
+                        <sp:select id="partner_id" name="partner_id" key="core_partner_vendor" class="form-control"/>
                     </div>
                     <div class="form-group">
                         <label class="col-form-label mr-2" for="is_complete">收货状态</label>
@@ -80,9 +80,9 @@
                             <th data-name="unit" class="text-left">单位</th>
                             <th data-name="unit_price" class="text-left" sec:authorize="${hasAuthority('pur_purchase_order_add') or hasAuthority('pur_purchase_order_edit')}">含税单价(元)</th>
                             <th data-name="total_price" class="text-left" sec:authorize="${hasAuthority('pur_purchase_order_add') or hasAuthority('pur_purchase_order_edit')}">含税总计(元)</th>
-                            <th data-name="delivery_date" class="text-left" style="width: 120px">交货日期</th>
-                            <th data-name="create_time" class="text-left" style="width: 180px">采购时间</th>
-                            <th data-name="is_complete" class="text-left" style="width: 50px">收货状态</th>
+                            <th data-name="delivery_date" class="text-center" style="width: 120px">交货日期</th>
+                            <th data-name="create_time" class="text-center" style="width: 180px">采购时间</th>
+                            <th data-name="is_complete" class="text-center" style="width: 50px">收货状态</th>
                             <th data-name="goodsReceiptQuantity" class="text-left">已收货数量</th>
                             <th data-name="openQuantity" class="text-left">待收货数量</th>
                         </tr>
