--- a/src/main/resources/templates/modules/produce/produce_order.html
+++ b/src/main/resources/templates/modules/produce/produce_order.html
@@ -84,6 +84,7 @@
             <div class="card-body">
                 <form class="form-inline query-form-container" id="form-header">
                     <input type="hidden" id="id" th:value="${po.id}"/>
+                    <input type="hidden" id="version" th:value="${po.version}"/>
                     <input id="code" type="hidden" name="code" th:value="${po.code == null ? '1' : po.code}">
                     <!--                    <div class="form-group">-->
                     <!--                        <label class="col-form-label mr-2">生产单号</label>-->
@@ -1093,7 +1094,8 @@
                     if (isAdd) {
                         window.location = '/produce_orders/new'
                     } else {
-                        window.location = '/produce_orders/'+res.id+'?readonly=true'
+                        $('#version').val(parseInt($('#version').val()) + 1)
+                        // window.location = '/produce_orders/'+res.id+'?readonly=true'
                     }
                     reloadTab('produce_order_list')
                 }
