--- a/src/main/resources/templates/modules/produce/produce_order.html
+++ b/src/main/resources/templates/modules/produce/produce_order.html
@@ -858,7 +858,7 @@
                         if (row.materialType === 'ROH' || !row.code) {
                             return ''
                         }
-                        return '<a href="javascript:;" onclick="openOnNewTab(\''+row.code+'\', \'/reports/736036369939337216?code='+row.code+'\', \'物料凭证\')">'+row.code+'</a>'
+                        return '<a href="javascript:;" onclick="openOnNewTab(\''+row.code+'\', \'/reports/736036369939337216?code='+row.code+'\', \'生产计划\')">'+row.code+'</a>'
                     }
                 },
                 {
