--- a/src/main/resources/templates/modules/purchase/list-detail.html
+++ b/src/main/resources/templates/modules/purchase/list-detail.html
@@ -39,6 +39,10 @@
                         <input class="form-control" id="material_code" type="text" name="material_code" autocomplete="" value="">
                     </div>
                     <div class="form-group">
+                        <label class="col-form-label mr-2" for="keywords">关键字</label>
+                        <input class="form-control" id="keywords" type="text" name="keywords" autocomplete="" value="" placeholder="多个关键字用空格隔开">
+                    </div>
+                    <div class="form-group">
                         <label class="col-form-label mr-2" for="partner_id">供应商</label>
                         <sp:select id="partner_id" name="partner_id" key="core_partner_vendor" class="form-control"/>
                     </div>
