--- a/src/main/resources/templates/modules/partner.html
+++ b/src/main/resources/templates/modules/partner.html
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="accountNumber" class="col-sm-3 col-form-label">银行账户</label>
+                        <label for="accountNumber" class="col-sm-3 col-form-label">银行账号</label>
                         <div class="col-sm-9">
                             <input type="text" class="form-control" id="accountNumber" name="accountNumber" maxlength="32" v-model="accountNumber.value" th:value="${formBO.propertyMap.accountNumber.value}"
                                    placeholder="请输入银行账户" value="">
@@ -205,7 +205,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="accountNumber" class="col-sm-3 col-form-label">银行账户</label>
+                        <label for="accountNumber" class="col-sm-3 col-form-label">银行账号</label>
                         <div class="col-sm-9">
                             <input type="text" class="form-control" name="accountNumber" maxlength="32"  v-model="accountNumber.value" th:value="${formBO.propertyMap.accountNumber.value}"
                                    placeholder="请输入银行账户" value="">
