--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -560,6 +560,19 @@
 
             params['itemList'] = $editableTable.editableTablePlus('getValue')
 
+            // 线根据供应商设置品牌
+            let size = params['itemList'].length
+            for(let index = 0; index < size; index++) {
+                let partnerId = $('#partnerId').val();
+                let lineBrand = '725460061379387392' == partnerId ? '无锡联为科技有限公司' : $('#partnerId option:selected').text()
+                $editableTable.find("tbody tr:eq("+(index)+")").each(function () {
+                    let materialCode = $(this).find(':input[name=materialCode]').val()
+                    if (materialCode === 'R00548' || materialCode === 'R00848' || materialCode === 'R00904') {
+                        $(this).find('td.characteristic-td .items > div :input[name=LINE_BRAND]').val(lineBrand)
+                    }
+                })
+            }
+
             characteristic.getCharacteristicParams($editableTable, params['itemList'])
 
             // 保存当前 active 到 DOM 中
