feat: 允许根据生产计划单退料

--- a/src/main/resources/templates/modules/inventory/index.html
+++ b/src/main/resources/templates/modules/inventory/index.html
@@ -217,8 +217,8 @@
             "RETURN": ["OTHER", "PO", "SO"],
             // "RETURN": ["MATERIAL_DOCUMENT", "PO", "SO"],
             "MOVING_TO_PRODUCE": ["OTHER", "PP"],
-            // "RETURN_FROM_PRODUCE": ["OTHER", "PP"],
-            "RETURN_FROM_PRODUCE": ["OTHER"],
+            "RETURN_FROM_PRODUCE": ["OTHER", "PP"],
+            // "RETURN_FROM_PRODUCE": ["OTHER"],
             // "CANCEL": ["MATERIAL_DOCUMENT"],
             "DELETE": ["MATERIAL_DOCUMENT"],
             "DISPLAY": ["MATERIAL_DOCUMENT"]
