feat: 销售单允许修改行项目特征值

--- a/src/main/resources/templates/modules/produce/produce_order.html
+++ b/src/main/resources/templates/modules/produce/produce_order.html
@@ -691,7 +691,7 @@
                     // width: 80,
                     title: "特征值",
                     required: true,
-                    disabled: true
+                    // disabled: true
                 },
                 {
                     type: "decimal",
