--- a/src/main/resources/templates/modules/produce/produce_order.html
+++ b/src/main/resources/templates/modules/produce/produce_order.html
@@ -691,7 +691,7 @@
                     // width: 80,
                     title: "特征值",
                     required: true,
-                    // disabled: true
+                    disabled: readonly
                 },
                 {
                     type: "decimal",
@@ -1184,7 +1184,9 @@
                 $receiveContactInfo.autofill(firstContactInfo)
             }
 
-            $editableTable.editableTablePlus('readonly', readonly)
+            if (readonly) {
+                $editableTable.editableTablePlus('readonly', readonly)
+            }
         }
 
         function calcAmount($tr) {
