chore: 盘点修改线供应商是否必填

--- a/src/main/resources/templates/modules/inventory/count.html
+++ b/src/main/resources/templates/modules/inventory/count.html
@@ -104,7 +104,7 @@
                     required: true,
                     mode: 'multiple', // 多选
                     selected: function ($tr, value) {
-                        characteristic.selectedCharacteristic($tr, value)
+                        characteristic.selectedCharacteristic($tr, value, true)
                     }
                 },
                 {
