--- a/src/main/resources/templates/modules/inventory/index.html
+++ b/src/main/resources/templates/modules/inventory/index.html
@@ -359,18 +359,21 @@
                         $("#table-container table.table-tbody :input[name=materialCode]").prop("disabled", true).prop('readonly', true)
                     }
 
-                    // 针对线进行处理
-                    $('table input[name=materialCode]').each(function() {
-                        if ($(this).val() === 'R00848' || $(this).val() === 'R00904' || $(this).val() === 'R00548') {
-                            let $tr = $(this).parents('tr')
-                            let value = $editableTable.editableTablePlus('_getValue', $tr)
-                            if (!value.LINE_BRAND) {
-                                // 可编辑模式
-                                $tr.find('input[name=characteristic]').prop("disabled", false).prop('readonly', false)
-                                $tr.find('select[name=LINE_BRAND]').prop("disabled", false).attr('readonly', false)
+                    if (type.value !== 'DISPLAY') {
+                        // 针对线进行处理
+                        $('table input[name=materialCode]').each(function() {
+                            if ($(this).val() === 'R00848' || $(this).val() === 'R00904' || $(this).val() === 'R00548') {
+                                let $tr = $(this).parents('tr')
+                                let value = $editableTable.editableTablePlus('_getValue', $tr)
+                                if (!value.LINE_BRAND) {
+                                    // 可编辑模式
+                                    $tr.find('input[name=characteristic]').prop("disabled", false).prop('readonly', false)
+                                    $tr.find('select[name=LINE_BRAND]').prop("disabled", false).attr('readonly', false)
+                                }
                             }
-                        }
-                    })
+                        })
+                    }
+
                 }).fail(function(err) {
                     console.log(err.responseJSON)
                 })
