style: 调整 table 的列宽度

--- a/src/main/resources/templates/modules/inventory/index.html
+++ b/src/main/resources/templates/modules/inventory/index.html
@@ -161,12 +161,14 @@
                 {
                     type: "label",
                     name: "materialName",
-                    title: "名称"
+                    title: "名称",
+                    width: 200
                 },
                 {
                     type: "label",
                     name: "materialSpecification",
-                    title: "规格"
+                    title: "规格",
+                    width: 200
                 },
                 {
                     type: "characteristic",
