--- a/src/main/resources/templates/modules/produce/produce_order.html
+++ b/src/main/resources/templates/modules/produce/produce_order.html
@@ -337,8 +337,8 @@
                                 <tr>
                                     <th style="width: 50px" data-index>序号</th>
                                     <th style="width: 100px" class="sortable active asc">物料</th>
-                                    <th style="width: 100px;">名称</th>
-                                    <th>规格</th>
+                                    <th style="width: 200px;">名称</th>
+                                    <th style="width: 200px;">规格</th>
                                     <th>特征值</th>
                                     <th style="width: 100px">基本单位</th>
                                     <th style="width: 100px" class="sortable text-right">应领料数量</th>
@@ -375,7 +375,7 @@
                                 <tr>
                                     <th style="width: 50px" data-index>序号</th>
                                     <th style="width: 100px" class="sortable active asc">物料</th>
-                                    <th style="width: 100px;">名称</th>
+                                    <th style="width: 200px;">名称</th>
                                     <th>规格 & 特征值</th>
                                     <th style="width: 100px" class="sortable text-right">采购数量</th>
                                     <th style="width: 100px">基本单位</th>
