--- a/src/main/resources/templates/tpl/ajax_list.html
+++ b/src/main/resources/templates/tpl/ajax_list.html
@@ -141,6 +141,7 @@
     <script th:src="@{/editable-table/editable-table.js}"></script>
     <script th:src="@{/ajaxfileupload.js}"></script>
     <script th:src="@{/plugins/lodash.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/download.js}"></script>
 
     <script th:inline="javascript">
         var readonly
