--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -232,7 +232,7 @@
             <button class="btn btn-primary" type="button" name="send" onclick="send()">
                 <i class="fa fa-send"></i> 提交</button>
 
-            <button class="btn btn-secondary ml-2" type="button" name="download" onclick="download()" th:if="${po.id != null}">
+            <button class="btn btn-secondary ml-2" type="button" name="download" onclick="downloadOrder()" th:if="${po.id != null}">
                 <i class="fa fa-upload"></i> 下载订单</button>
         </div>
     </div>
@@ -254,6 +254,7 @@
 
     <script th:src="@{/ajaxfileupload.js}"></script>
     <script th:src="@{/js/upload.js}"></script>
+    <script th:src="@{/js/download.js}"></script>
 
     <script th:inline="javascript">
         let readonly = true
@@ -550,11 +551,43 @@
         }
 
         function send() {
+            let params = getParams()
+            if (typeof params === 'undefined') {
+                return
+            }
+
+            $.ajax({
+                url: '/purchase_order',
+                type: "POST",
+                data: JSON.stringify(params),
+                dataType: "json",
+                contentType: "application/json; charset=utf-8",
+                success: function(res){
+                    // $('#code').val(res.code)
+                    // $('#code_text').text(res.code)
+                    // $('#id').val(res.id)
+                    // $('#createTime').text(res.createTime)
+                    //
+                    // removeValidClass();
+                    // loadItem(res.itemList)
+                    // toastr.success('订单提交成功！' + res.code);
+                    // reloadTab('purchase_order_list')
+
+                    toastr.success('订单提交成功');
+                    // if (isAdd) {
+                        window.location = '/purchase_order/'+res.id+'?readonly=true'
+                    // }
+                    reloadTab('purchase_order_list')
+                }
+            });
+        }
+        
+        function getParams() {
             if (!valid()) {
                 return
             }
 
-            var params = $('#form-header').form2json({allowEmptyMultiVal:true})
+            let params = $('#form-header').form2json({allowEmptyMultiVal:true})
             delete params.attachment_file
             params['attachmentList'] = JSON.parse(params['attachmentList'])
 
@@ -630,38 +663,22 @@
             }
 
             console.log(params)
-
-            $.ajax({
-                url: '/purchase_order',
-                type: "POST",
-                data: JSON.stringify(params),
-                dataType: "json",
-                contentType: "application/json; charset=utf-8",
-                success: function(res){
-                    // $('#code').val(res.code)
-                    // $('#code_text').text(res.code)
-                    // $('#id').val(res.id)
-                    // $('#createTime').text(res.createTime)
-                    //
-                    // removeValidClass();
-                    // loadItem(res.itemList)
-                    // toastr.success('订单提交成功！' + res.code);
-                    // reloadTab('purchase_order_list')
-
-                    toastr.success('订单提交成功');
-                    // if (isAdd) {
-                        window.location = '/purchase_order/'+res.id+'?readonly=true'
-                    // }
-                    reloadTab('purchase_order_list')
-                }
-            });
+            return params
         }
 
-        function download() {
-            if (!valid()) {
+        function downloadOrder() {
+            let params = getParams()
+            if (typeof params === 'undefined') {
                 return
             }
-            window.location = "/purchase_order/" + document.getElementById('id').value + "/download"
+            
+            $.LoadingOverlay("show")
+            download("/purchase_order/" + document.getElementById('id').value + "/download", function () {
+                $.LoadingOverlay("hide")
+            }, function (message) {
+                toastr.error(message)
+            })
+            // window.location = "/purchase_order/" + document.getElementById('id').value + "/download"
         }
 
         $('#goods_receipt_container').table({
